# qrcode-barcode-reader

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  pyrightconfig.json
notebooks/: ParseImage.ipynb
qrcode_barcode_reader/: __main__.py
